--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </div>
         
     </div>
+    <div class="main">
+        <h1 class="heading">The multipurpose WordPress<br>theme that helps you build<br>ANY type of website<br>in a few hours</h1>
+        <h3 class="subheading">Adapts to <strong>every website</strong>. For every client. Every time.</h3>
+    </div>
     
 
     <script src="index.js"></script>
