add some method

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
         <ul class="main-menu" >
             <li><a href="#website">Websites</a></li>
             <li><a href="#build">Builder & Options</a></li>
-            <li><a href="">Shortcodes</a></li>
+            <li class="has-submenu"    ><a href="">Shortcodes</a>
+                <ul class="submenu">
+                    <li>company</li>
+                    <li>company</li>
+                    <li>company</li>
+                    <li>company</li>
+                    <li>company</li>
+                    <li>company</li>
+                    <li>company</li>
+                    <li>company</li>
+                </ul>
+            </li>
             <li><a href="#blog">blog</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#shop">Shop</a></li>
